[gd_scene load_steps=41 format=3 uid="uid://ducgrspg4c2fe"]

[ext_resource type="Script" path="res://Scripts/chars/player.gd" id="1_c7yih"]
[ext_resource type="PackedScene" uid="uid://c8vf0dk5kaod7" path="res://Scenes/chars/wpns/player_wepon_sword.tscn" id="2_am8ds"]
[ext_resource type="Texture2D" uid="uid://b86soapwdv1k3" path="res://Assets/Wpns/i.png" id="2_x266q"]
[ext_resource type="Texture2D" uid="uid://c837lj0ac6n64" path="res://Assets/Progresbars/progress_back_black.png" id="3_n1t1b"]
[ext_resource type="Texture2D" uid="uid://dda32dykvb2dp" path="res://Assets/Progresbars/progres_green.png" id="4_3axwn"]
[ext_resource type="Texture2D" uid="uid://cxshx0mirm8y6" path="res://Assets/Chars/circG.png" id="5_qi0f5"]
[ext_resource type="Texture2D" uid="uid://devbbm37rcbk6" path="res://Assets/Progresbars/progress_black_small.png" id="5_twa5m"]
[ext_resource type="Texture2D" uid="uid://ialmuyrwg3ph" path="res://Assets/keys/key_holder.png" id="7_glj47"]
[ext_resource type="Texture2D" uid="uid://cydi4yux0tkqo" path="res://Assets/keys/key_universal.png" id="7_ywldw"]
[ext_resource type="Texture2D" uid="uid://dup3j7u8r4alq" path="res://Assets/keys/key_blue.png" id="8_wyhat"]
[ext_resource type="Texture2D" uid="uid://cm3b3u8gybexr" path="res://Assets/keys/keay_green.png" id="9_i45y0"]
[ext_resource type="Texture2D" uid="uid://duhaamj8t4n4g" path="res://Assets/keys/key_red.png" id="10_vx3mx"]
[ext_resource type="AudioStream" uid="uid://cnertt1vp130u" path="res://Sounds/SFX/combat/swing.mp3" id="13_2017l"]
[ext_resource type="AudioStream" uid="uid://ctbn0r60pdnpn" path="res://Sounds/SFX/key_get.mp3" id="14_6p5nc"]
[ext_resource type="AudioStream" uid="uid://dhjsvemjbw54l" path="res://Sounds/SFX/sheathe.mp3" id="15_7qfnm"]
[ext_resource type="AudioStream" uid="uid://crxgp6wu5gx8" path="res://Sounds/SFX/unsheathe.mp3" id="16_lylam"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_csofs"]
size = Vector2(24.2105, 35.7895)

[sub_resource type="CircleShape2D" id="CircleShape2D_4dpe1"]
radius = 16.8421

[sub_resource type="AtlasTexture" id="AtlasTexture_1xrcu"]
atlas = ExtResource("7_ywldw")
region = Rect2(0, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_dg3qu"]
atlas = ExtResource("7_ywldw")
region = Rect2(20, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_my0a3"]
atlas = ExtResource("7_ywldw")
region = Rect2(40, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_3f305"]
atlas = ExtResource("7_ywldw")
region = Rect2(60, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_q2ubi"]
atlas = ExtResource("7_ywldw")
region = Rect2(80, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_u1jad"]
atlas = ExtResource("7_ywldw")
region = Rect2(100, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1kj2"]
atlas = ExtResource("7_ywldw")
region = Rect2(120, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_2ni5s"]
atlas = ExtResource("7_ywldw")
region = Rect2(140, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwlu4"]
atlas = ExtResource("7_ywldw")
region = Rect2(160, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4r3a"]
atlas = ExtResource("7_ywldw")
region = Rect2(180, 0, 20, 9)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi0re"]
atlas = ExtResource("7_ywldw")
region = Rect2(200, 0, 20, 9)

[sub_resource type="SpriteFrames" id="SpriteFrames_2brf5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1xrcu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dg3qu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my0a3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3f305")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q2ubi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u1jad")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1kj2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2ni5s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwlu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4r3a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi0re")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_hfc10"]
radius = 16.8421

[sub_resource type="AudioStreamMP3" id="AudioStreamMP3_ap8yv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_51do8"]
radius = 48.4211

[sub_resource type="Animation" id="Animation_udnlp"]
resource_name = "attackk_sword"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playersprite/player_wepon_sword:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-3.14159, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playersprite/player_wepon_sword:monitorable")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ny2lm"]
resource_name = "unholster"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playersprite/player_wepon_sword_holstered_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.3562, 3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playersprite/player_wepon_sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playersprite/player_wepon_sword_holstered_sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_rcfht"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playersprite/player_wepon_sword_holstered_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.3562]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playersprite/keys:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playersprite/player_wepon_sword:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playersprite/player_wepon_sword:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("playersprite/player_wepon_sword_holstered_sprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("playersprite/keys/key_pickup_detector:monitoring")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("playersprite/keys/key_pickup_detector:monitorable")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("playersprite/keys/key_holder:monitoring")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("playersprite/keys/key_holder:monitorable")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_27snc"]
resource_name = "holster"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playersprite/player_wepon_sword_holstered_sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [3.14159, 2.3562]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playersprite/player_wepon_sword:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playersprite/player_wepon_sword_holstered_sprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yit7y"]
resource_name = "get_key"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playersprite/keys:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -0.698132]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playersprite/keys/key_pickup_detector:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playersprite/keys/key_pickup_detector:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playersprite/keys/key_holder:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("playersprite/keys/key_holder:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a17e4"]
resource_name = "unget_key"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("playersprite/keys:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.698132, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("playersprite/keys/key_pickup_detector:monitoring")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("playersprite/keys/key_pickup_detector:monitorable")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("playersprite/keys/key_holder:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("playersprite/keys/key_holder:monitorable")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m52io"]
_data = {
"RESET": SubResource("Animation_rcfht"),
"attackk_sword": SubResource("Animation_udnlp"),
"get_key": SubResource("Animation_yit7y"),
"holster": SubResource("Animation_27snc"),
"unget_key": SubResource("Animation_a17e4"),
"unholster": SubResource("Animation_ny2lm")
}

[node name="player" type="CharacterBody2D" groups=["player_body"]]
scale = Vector2(0.95, 0.95)
collision_layer = 2
motion_mode = 1
script = ExtResource("1_c7yih")

[node name="playersprite" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(3, 3)

[node name="player_wepon_sword_holstered_sprite" type="Sprite2D" parent="playersprite"]
position = Vector2(-2.80702, 7.9473e-08)
rotation = 2.3562
texture = ExtResource("2_x266q")

[node name="player_wepon_sword" parent="playersprite" instance=ExtResource("2_am8ds")]
visible = false
position = Vector2(20.7016, -0.266667)
rotation = -3.14159
scale = Vector2(0.333333, 0.333333)

[node name="playerbar" type="TextureProgressBar" parent="playersprite"]
texture_filter = 1
texture_repeat = 1
offset_left = 16.8421
offset_top = -16.8421
offset_right = 48.8421
offset_bottom = 15.1579
rotation = 1.5708
scale = Vector2(1.05, 1.05)
value = 100.0
fill_mode = 8
texture_under = ExtResource("3_n1t1b")
texture_over = ExtResource("5_twa5m")
texture_progress = ExtResource("4_3axwn")

[node name="debug" type="Area2D" parent="playersprite"]
scale = Vector2(0.333333, 0.333333)

[node name="debug_collbox" type="CollisionShape2D" parent="playersprite/debug"]
position = Vector2(81.5789, 6.91414e-06)
shape = SubResource("RectangleShape2D_csofs")

[node name="playersprite2" type="Sprite2D" parent="playersprite"]
texture_filter = 1
texture = ExtResource("5_qi0f5")

[node name="keys" type="Node2D" parent="playersprite"]
scale = Vector2(0.333333, 0.333333)

[node name="key_pickup_detector" type="Area2D" parent="playersprite/keys" groups=["pickup_blue_key", "pickup_green_key", "pickup_red_key", "pickup_universal_key"]]
collision_layer = 2
collision_mask = 16384
monitoring = false
monitorable = false

[node name="key_pickup_collbox" type="CollisionShape2D" parent="playersprite/keys/key_pickup_detector"]
position = Vector2(35.7895, 45.2632)
shape = SubResource("CircleShape2D_4dpe1")

[node name="key_holder" type="Area2D" parent="playersprite/keys"]
collision_layer = 2
collision_mask = 1024
monitoring = false
monitorable = false

[node name="key_holder_sprite" type="Sprite2D" parent="playersprite/keys/key_holder"]
position = Vector2(28.4211, 38.9474)
rotation = 0.785398
texture = ExtResource("7_glj47")

[node name="key_universal_sprite" type="AnimatedSprite2D" parent="playersprite/keys/key_holder"]
position = Vector2(21.0526, 31.5789)
rotation = 0.781907
scale = Vector2(1.3, 1.3)
sprite_frames = SubResource("SpriteFrames_2brf5")
autoplay = "default"
frame_progress = 0.554312

[node name="key_blue_sprite" type="Sprite2D" parent="playersprite/keys/key_holder"]
position = Vector2(30.5263, 49.4737)
rotation = -2.12233
scale = Vector2(1.3, 1.3)
texture = ExtResource("8_wyhat")

[node name="key_green_sprite" type="Sprite2D" parent="playersprite/keys/key_holder"]
position = Vector2(35.7895, 45.2632)
rotation = -2.44347
scale = Vector2(1.3, 1.3)
texture = ExtResource("9_i45y0")

[node name="key_red_sprite" type="Sprite2D" parent="playersprite/keys/key_holder"]
position = Vector2(38.9474, 38.9474)
rotation = -2.9531
scale = Vector2(1.3, 1.3)
texture = ExtResource("10_vx3mx")

[node name="key_holder_collbox" type="CollisionShape2D" parent="playersprite/keys/key_holder"]
position = Vector2(35.7895, 45.2632)
shape = SubResource("CircleShape2D_hfc10")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="playersprite/keys/key_holder"]
stream = SubResource("AudioStreamMP3_ap8yv")

[node name="playercollbox" type="CollisionShape2D" parent="." groups=["player_body"]]
position = Vector2(7.62939e-06, 9.53674e-07)
rotation = 1.5708
shape = SubResource("CircleShape2D_51do8")

[node name="playerhurtbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 13120

[node name="playerhurtboxcollbox" type="CollisionShape2D" parent="playerhurtbox"]
position = Vector2(-1.66893e-06, 0)
rotation = 1.5708
shape = SubResource("CircleShape2D_51do8")
debug_color = Color(1, 0, 0, 0.419608)

[node name="playerhp" type="Label" parent="."]
texture_filter = 1
offset_left = -26.3158
offset_top = -16.8421
offset_right = 28.6842
offset_bottom = 20.1579
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 35
text = "100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label" type="Label" parent="."]
visible = false
offset_top = -86.3158
offset_right = 40.0
offset_bottom = -63.3158

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="swing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("13_2017l")
volume_db = -10.0
bus = &"Effect"

[node name="key" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_6p5nc")
volume_db = -3.0
bus = &"Effect"

[node name="holster" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_7qfnm")
volume_db = -3.0
bus = &"Effect"

[node name="unholster" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_lylam")
volume_db = -3.0
bus = &"Effect"

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m52io")
}

[connection signal="body_entered" from="playersprite/debug" to="." method="_on_debug_body_entered"]
[connection signal="body_exited" from="playersprite/debug" to="." method="_on_debug_body_exited"]
[connection signal="area_entered" from="playersprite/keys/key_pickup_detector" to="." method="_on_key_pickup_detector_area_entered"]
[connection signal="area_entered" from="playersprite/keys/key_holder" to="." method="_on_key_holder_area_entered"]
[connection signal="area_entered" from="playerhurtbox" to="." method="_on_playerhurtbox_area_entered"]
[connection signal="body_entered" from="playerhurtbox" to="." method="_on_playerhurtbox_body_entered"]
